Revision history for HTML::Mason.

** denotes an incompatible change

{{$NEXT}}

1.58     2017-10-29

    - Redid the release because of some dzil issues. 1.57 might be a little
      wonky.

1.57     2017-10-29

    [ BUG FIXES ]

    - Fix test failures under 5.26.0+ due to "." no longer being in @INC. PR
      By Kent Fredric. GH #6. Fixed RT #121443.

1.56     2014-11-14

    [ BUG FIXES ]

    - Fix a packaging issue with the last release that prevented PAUSE from
      indexing some modules in the tarball.

1.55     2014-11-14

    [ BUG FIXES ]

    - Shut up warnings from recent versions of CGI.pm. Patch by Kevin
      Falcone. GitHub PR #1.

1.54  Jan 19, 2014

    [ DISTRIBUTION ]

    - Remake with gnutar

1.53  Jan 18, 2014

    [ DISTRIBUTION ]

    - Attempt to fix corrupted tar

1.52  Oct 9, 2013

    [ BUG FIXES ]

    - Ignore 'Software caused connection abort' errors. RT #49031. Submitted
      by Morten Bjoernsvik.

    - Sort hash keys to deal with Perl 5.18+ hash randomization. RT
      #88708. Submitted by Zefram.

    - Fix 'and' precedence with explicit parens. RT #87050. Submitted by
      Alex Vandiver.

    - Escape each part of substitution, not their
      concatenation. github.com/jonswar/perl-HTML-Mason/pull/1. Submitted
      by Ricardo Signes.

    [ ENHANCEMENTS ]

    - Add use_warnings flag, similar to
      use_strict. github.com/jonswar/perl-HTML-Mason/pull/4. Submitted by
      Aevar Bjarmason.

1.51  May 8, 2013

    [ DISTRIBUTION ]

    - Fix hardcoded version

    [DOCS]

    - Add HTML::Mason::FAQ, from old masonhq.com website

1.50 Jul 11, 2012

    [ DISTRIBUTION ]

    - Switch to Dist::Zilla
    - Eliminate HTML docs from distribution, available on web
    - Move live Apache tests to author-only

1.49 Feb 27, 2012

    [ DOCS ]

    - Fixed misspellings in docs. RT #74676. Reported by Salvatore Bonaccorso.

1.48 Feb 3, 2012

    [ BUG FIXES ]
