@@ -78,6 +78,7 @@ MasonUseStrict
 MasonUseWarnings
 NullCache
 O'Reilly
+PRs
 PerlFreshRestart
 PerlHandler
 PerlModule
