@@ -18,6 +18,7 @@ finder = SkipApacheHandler
 [@DROLSKY]
 dist = HTML-Mason
 stopwords_file = .stopwords
+use_github_issues = 1
 -remove = AutoPrereqs
 -remove = BumpVersionAfterRelease
 -remove = DROLSKY::TidyAll
