@@ -4,6 +4,9 @@ Revision history for HTML::Mason.
 
 {{$NEXT}}
 
+    - Moved issues to GH issues and added a note about lack of maintenance.
+
+
 1.58     2017-10-29
 
     - Redid the release because of some dzil issues. 1.57 might be a little
